package model;

/**
 * Premium empty interface
 */
public interface Premium {
}
