package model;

public enum Size {
    S,
    M,
    L,
    XL
}
